--- a/Tic_Tac_Teo/DockerFile
+++ b/Tic_Tac_Teo/DockerFile
@@ -1,13 +1,22 @@
-# Build stage
-FROM maven:3.9-eclipse-temurin-17 as build
+# Stage 1: Build the JAR
+FROM maven:3.9-eclipse-temurin-17 AS build
 WORKDIR /app
-COPY pom.xml .
-COPY src ./src
-RUN mvn -B -DskipTests package
 
-# Run stage
+# Copy Maven config first (for caching dependencies)
+COPY pom.xml .
+RUN mvn dependency:go-offline
+
+# Copy the rest of the source and build
+COPY src ./src
+RUN mvn clean package -DskipTests
+
+# Stage 2: Run the app
 FROM eclipse-temurin:17
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
-EXPOSE 2108
-ENTRYPOINT ["java","-jar","/app/app.jar"]
+
+# Render automatically sets PORT; bind Spring Boot to it
+ENV PORT=8080
+EXPOSE 8080
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
