--- a/Tic_Tac_Teo/src/DockerFile
+++ b/Tic_Tac_Teo/src/DockerFile
@@ -1,22 +1,27 @@
-# Stage 1: Build the JAR
-FROM maven:3.9-eclipse-temurin-17 AS build
+# Use an official Maven image to build the application
+FROM maven:3.9-eclipse-temurin-17 as build
+
 WORKDIR /app
 
-# Copy Maven config first (for caching dependencies)
+# Copy the pom.xml and fetch dependencies
 COPY pom.xml .
 RUN mvn dependency:go-offline
 
-# Copy the rest of the source and build
+# Copy the source code
 COPY src ./src
+
+# Build the app
 RUN mvn clean package -DskipTests
 
-# Stage 2: Run the app
+# Stage 2: Run the app with a JRE
 FROM eclipse-temurin:17
+
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
 
-# Render automatically sets PORT; bind Spring Boot to it
-ENV PORT=8080
-EXPOSE 8080
+# Copy the compiled JAR from the build stage
+COPY --from=build /app/target/Tic_Tac_Teo-0.0.1-SNAPSHOT.jar app.jar
 
+# Run the Spring Boot application
 ENTRYPOINT ["java", "-jar", "app.jar"]
+
+EXPOSE 8080
