--- a/Tic_Tac_Teo/DockerFile
+++ b/Tic_Tac_Teo/DockerFile
@@ -1,27 +1,30 @@
-# Use an official Maven image to build the application
-FROM maven:3.9-eclipse-temurin-17 as build
+# Use official Maven image to build the app
+FROM maven:3.9-eclipse-temurin-17 AS build
 
+# Set the working directory inside the container
 WORKDIR /app
 
-# Copy the pom.xml and fetch dependencies
+# Copy the pom.xml and download dependencies
 COPY pom.xml .
 RUN mvn dependency:go-offline
 
 # Copy the source code
 COPY src ./src
 
-# Build the app
+# Build the app using Maven
 RUN mvn clean package -DskipTests
 
-# Stage 2: Run the app with a JRE
-FROM eclipse-temurin:17
+# Use official OpenJDK image to run the app
+FROM eclipse-temurin:17-jre-alpine
 
+# Set the working directory inside the container
 WORKDIR /app
 
-# Copy the compiled JAR from the build stage
-COPY --from=build /app/target/Tic_Tac_Teo-0.0.1-SNAPSHOT.jar app.jar
+# Copy the JAR file from the build stage
+COPY --from=build /app/target/Tic_Tac_Teo-0.0.1-SNAPSHOT.jar Tic_Tac_Teo.jar
 
-# Run the Spring Boot application
-ENTRYPOINT ["java", "-jar", "app.jar"]
-
+# Expose the port the app runs on (default Spring Boot port is 8080)
 EXPOSE 8080
+
+# Command to run the application
+ENTRYPOINT ["java", "-jar", "Tic_Tac_Teo.jar"]
